--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,6 +1,22 @@
-<center><h1 class="title">Chỉnh sửa thông tin khách hàng</h1></center>
+<div class="employee_top_breadcrumb">
+    <nav class="page-section" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+        <div class="row">
+        <div class="col-sm-6">
+            <div class="d-flex justify-content-start">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Cấu hình</a></li>
+                <li class="breadcrumb-item"><a href="#">Khách hàng</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Chỉnh sửa</li>
+            </ol>
+            </div>
+        </div>
+        </div>
+    </nav>
+</div>
 
 <%= render 'form', client: @client %>
 
-<button class="button_back"><%= link_to 'Quay lại', clients_path %></button>
-<button class="button_show"><%= link_to 'Xem', @client %></button>
+<div class="bottom_container">
+    <%= link_to clients_path do%><div class="functionality_add btn btn-primary">Quay lại</div><% end %>
+    <%= link_to @client do%><div class="functionality_add btn btn-primary">Xem</div><% end %>
+  </div>
