--- a/app/views/room_types/_form.html.erb
+++ b/app/views/room_types/_form.html.erb
@@ -12,7 +12,8 @@
   <% end %>
 
 <center>
-<div class="_form_container tColumn">
+<div class="_form_container">
+<div class="_form_centent tColumn">
   <div class="field tRow">
     <div class="_form_item_name">
       <%= form.label :name %>
@@ -102,6 +103,7 @@
   <div class="actions button_submit">
     <%= form.submit :class => 'btn btn-primary' %>
   </div>
+</div>
 </div>
 </center>
 <% end %>
