--- a/app/assets/stylesheets/clients.scss
+++ b/app/assets/stylesheets/clients.scss
@@ -1,3 +1,190 @@
 // Place all the styles related to the Clients controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.top_breadcrumb{
+    font-weight: 700;
+    font-size: 0.9375rem;
+    
+}
+
+.client_main_view{
+    display: flex;
+    flex-direction: row;
+    border: solid 1px black;
+    width: 100%;
+
+    .left_container{
+        min-height: 300px;
+        flex-grow: 1;
+        border-right: solid 1px grey;
+    }
+    
+    .right_container{
+        width: 30%;
+        max-width: 360px;
+        
+        padding: 10px 0px 10px 0px;
+        width: calc(100% - 10px);
+        padding: 5px;
+    }
+
+    table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+        margin-top: 10px;
+        td, th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #dddddd;
+        }
+        tr:hover {
+            background-color: #A5B8EA;
+            cursor: pointer;
+        }
+        tr.row_selected{
+            background-color: #7895E0;
+            cursor: pointer;
+        }
+    }
+
+    functionalities_choised {
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 10px;
+    }
+
+    .section_name{
+        font-weight: 700;
+        font-size: 1rem;
+        margin-left: 5px;
+        color: #436BD5;
+    }
+
+    .functionalities{
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 10px;
+    }
+
+    .functionality_add {
+        flex-grow: 1; 
+        padding: 10px;
+        margin: 5px;
+        border: solid 1px back;
+        text-align: center;
+        border-radius: 4px;
+    }
+
+    .functionality_item{
+        flex-grow: 1; 
+        padding: 10px;
+        margin: 5px;
+        border: solid 1px gray;
+        text-align: center;
+        border-radius: 4px;
+        color: gray;
+        background-color: #bfbfbf;
+    }
+    .button_selected {
+        flex-grow: 1; 
+        padding: 10px;
+        margin: 5px;
+        border: solid 1px black;
+        text-align: center;
+        border-radius: 4px;
+        &:hover {
+            background-color: #7895E0;
+            cursor: pointer;
+        }
+        color: black;
+    }
+
+
+    .timkiem_container{
+        width: 100%;
+    }
+
+    .timkiem_container input {
+        margin: 5px;
+        width: calc(100% - 10px);
+        padding: 8px 5px 8px 5px;
+        background-color: lightgray;
+        outline: none;
+        border: solid 1px transparent;
+        font-size: 0.9375rem;
+        margin-bottom: 10px;
+        cursor: pointer;
+    }
+
+    .timkiem_container input:focus{
+        background-color: inherit;
+        border: solid 1px #436BD5 !important;
+    }
+
+    .boloc_container{
+        margin-left: 5px;
+    }
+
+    @media only screen and (max-width: 1200px) {
+        flex-direction: column-reverse;
+            .functionality_item{
+                max-width: 120px;
+            }
+            
+            .left_container{
+                border-right: none;
+            }
+            .right_container{
+                width: 100%;
+                max-width: 100%;
+            }
+    }
+}
+
+.label-status {
+	cursor: pointer;
+	text-indent: -9999px;
+	width: 200px*0.3;
+	height: 100px*0.3;
+	background: grey;
+	display: inline-block;
+	border-radius: 100px;
+	position: relative;
+}
+
+.label-status:after {
+	content: '';
+	position: absolute;
+	top: 5px*0.3;
+	left: 5px*0.3;
+	width: 90px*0.3;
+	height: 90px*0.3;
+	background: #fff;
+	border-radius: 90px;
+	transition: 0.3s;
+}
+
+input:checked + .label-status {
+	background: #bada55;
+}
+
+input:checked + .label-status:after {
+	left: calc(100% - 5px*0.3);
+	transform: translateX(-100%);
+}
+
+.label-status:active:after {
+	width: 130px*0.3;
+}
+
+
+
+   
+  
+
