--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -13,7 +13,8 @@
   <% end %>
 
 <center>
-<div class="_form_container tColumn">
+<div class="_form_container">
+<div class="_form_centent tColumn">
   <div class="field tRow">
     <div class="_form_item_name">
       <%= form.label :client_type, "Loại khách hàng" %>
@@ -98,6 +99,7 @@
   <div class="actions button_submit">
     <%= form.submit :class => 'btn btn-primary' %>
   </div>
+</div>
 </div>
 </center>
 <% end %>
