--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,5 +1,18 @@
-<center><h1 class="title">Tạo khách hàng mới</h1></center>
+<div class="employee_top_breadcrumb">
+<nav class="page-section" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="d-flex justify-content-start">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="#">Cấu hình</a></li>
+          <li class="breadcrumb-item"><a href="#">Khách hàng</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Thêm</li>
+        </ol>
+      </div>
+    </div>
+  </div>
+</nav>
+</div>
 
 <%= render 'form', client: @client %>
-
-<button class="button_back"><%= link_to 'Quay lại', clients_path %></button>
+<%= link_to clients_path do%><div class="functionality_add btn btn-primary">Quay lại</div><% end %>
