--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -12,17 +12,18 @@
   <% end %>
 
 <center>
-<div class="_form_container tColumn">
+<div class="_form_container">
+<div class="_form_centent tColumn">
   <div class="field tRow">
     <div class="_form_item_name">
       <%= form.label :employee_type, "Loại nhân viên" %>
     </div>
     <div class="">
-      <%= form.select :employee_type, ['Nhân viên Lễ Tân', 'Nhân viên Vệ Sinh', 'Quản Lý'] %>
+      <%= form.select :employee_type, ['Quản Lý', 'Nhân viên Lễ Tân', 'Nhân viên Vệ Sinh', 'Bảo vệ'] %>
     </div>
   </div>
 
-  <div class="field tRow">
+  <!-- <div class="field tRow">
     <div class="_form_item_name">
       <%= form.label :username, "Tên đăng nhập" %>
     </div>
@@ -47,7 +48,7 @@
     <div class="_form_item_input">
       <%= form.text_field :password %>
     </div>
-  </div>
+  </div> -->
 
   <div class="field tRow">
     <div class="_form_item_name">
@@ -126,13 +127,15 @@
       <%= form.label :status, "Trạng thái" %>
     </div>
     <div class="">
-      <input type="checkbox" id="switch" name="isWorking" value="1" checked /><label class="label-status" for="switch">Toggle</label>
+      <input class="employee_status_checkbox" type="checkbox" id="switch" name="isWorking" value="1" checked />
+      <label class="label-status" for="switch">Toggle</label>
     </div>
   </div>
 
   <div class="actions button_submit">
     <%= form.submit :class => 'btn btn-primary' %>
   </div>
+</div>
 </div>
 </center>
 <% end %>
