--- a/app/views/room_types/show.html.erb
+++ b/app/views/room_types/show.html.erb
@@ -1,9 +1,24 @@
 <center>
+<div class="employee_top_breadcrumb">
+    <nav class="page-section" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+        <div class="row">
+        <div class="col-sm-6">
+            <div class="d-flex justify-content-start">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Cấu hình</a></li>
+                <li class="breadcrumb-item"><a href="#">Loại phòng</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Xem</li>
+            </ol>
+            </div>
+        </div>
+        </div>
+    </nav>
+</div>
   <p id="notice"><%= notice %></p>
-
-  <div class="show_container tColumn">
+  <div class="show_container">
+  <div class="show_content tColumn">
   <p class="tRow">
-    <strong class="show_roomtype_name">Name:</strong>
+    <strong class="show_roomtype_name">Name</strong>
     <strong class="show_sign">:</strong>
     <%= @room_type.name %>
   </p>
@@ -14,6 +29,9 @@
     <%= @room_type.description %>
   </p>
   </div>
-  <button class="button_back"><%= link_to 'Back', room_types_path %></button>
-  <button class="button_edit"><%= link_to 'Edit', edit_room_type_path(@room_type) %></button>
+  <div class="bottom_container">
+    <%= link_to room_types_path do%><div class="functionality_add btn btn-primary">Quay lại</div><% end %>
+    <%= link_to edit_room_type_path(@room_type) do%><div class="functionality_add btn btn-primary">Chỉnh sửa</div><% end %>
+  </div>
+  </div>
 </center>
